# face-pro

./: .gitignore  README.md  pnpm-workspace.yaml
backend/: Cargo.toml  Dockerfile
backend/models/face_detection/0001/: metadata.json
backend/models/liveness/0001/: metadata.json
backend/src/: inference.rs  main.rs  models.rs  pad.rs  protocol.rs
backend/src/infer/: mod.rs  scrfd.rs
docs/: proof-of-life-professional.md
docs/postman/: face-pro-backend.postman_collection.json  face-pro-local.postman_environment.json
frontend/: README.md  package.json  tsconfig.base.json
frontend/apps/example/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/apps/example/src/: main.tsx
frontend/apps/example/src/ui/: App.tsx  style.css
tools/: dump_onnx_io.py
