[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.38", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hyper = { version = "1", features = ["full"] }
tower = "0.5"
tokio-tungstenite = "0.23"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["formatting"] }
ort = { version = "2.0.0-rc.10", features = ["download-binaries", "load-dynamic", "ndarray", "cuda"], optional = true }
ndarray = { version = "0.15", default-features = false, features = ["std"] }
base64 = "0.22"
tower-http = { version = "0.5", features = ["cors"] }
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
sha2 = "0.10"
hex = "0.4"

[[bin]]
name = "download_models"
path = "src/bin/download_models.rs"

[features]
default = []
onnx = ["dep:ort"]
